feat: add theme provider and toggle functionality
- Implemented ThemeProvider to manage light and dark themes with local storage support.
- Added ThemeToggle component for users to switch between themes.
- Updated App component to include ThemeProvider.
- Enhanced InsuranceForm with theme-aware styles and integrated ThemeToggle.
- Adjusted CSS variables for dark mode to improve contrast and readability.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/LOGO.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediPredict</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
+    />
+    <meta
+      name="theme-color"
+      content="#ffffff"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#0f172a"
+      media="(prefers-color-scheme: dark)"
+    />
+    <meta
+      name="description"
+      content="MediPredict - Medical Insurance Cost Prediction using Machine Learning"
+    />
+    <title>MediPredict - Medical Insurance Predictor</title>
   </head>
   <body>
     <div id="root"></div>
