feat: add react-select for improved form dropdowns and enhance UI components
- Added `react-select` dependency for better select inputs in the InsuranceForm component.
- Implemented custom Select component using `react-select` with improved styling and error handling.
- Updated InsuranceForm to replace native select elements with the new Select component.
- Enhanced button styles for better hover effects and transitions.
- Improved input and label components with transition effects for better user experience.
- Introduced a new GithubButton component for easy access to the project's GitHub repository.
- Applied animations and transitions to various elements in the InsuranceForm for a more dynamic UI.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       name="description"
       content="MediPredict - Medical Insurance Cost Prediction using Machine Learning"
     />
-    <title>MediPredict - Medical Insurance Predictor</title>
+    <title>MediPredict</title>
   </head>
   <body>
     <div id="root"></div>
